# Corewar_final

./: Makefile  asinc_testing_system.py  author  image_process_ops.sh
compiler/: CMakeLists.txt  Makefile  autotest.sh
compiler/libft/: Makefile
compiler/libft/ft_gnl/: ft_get_next_line.c
compiler/libft/ft_numbers/: ft_atoi_m.c
compiler/libft/ft_printf/: ft_printf.c
compiler/libft/ft_str/: ft_skip_spaces.c
compiler/libft/ft_string/: ft_string_free.c  ft_string_push_back.c
compiler/libft/includes/: ft_get_next_line.h  ft_string.h  libft.h
compiler/srcs/: asm.h  ft_args_parse.c  ft_champ.c  ft_cmds_parse.c  ft_compile.c  ft_find_s_h_flags.c  ft_flag_parse_utils.c  ft_flags.c  ft_freeshers.c  ft_header_utils.c  ft_labels_parse.c  ft_parse_header.c  ft_translator.c  ft_utils.c  globals.c  main.c  parser.c
virtual_machine/: CMakeLists.txt  Makefile
virtual_machine/includes/: timsort.h  virtual_machine.h  vm_constants.h  vm_types.h  vm_vector.h
virtual_machine/libft/: CMakeLists.txt  Makefile
virtual_machine/libft/includes/: ft_binary_heap.h  ft_iostream.h  ft_list.h  ft_matrix.h  ft_memory.h  ft_printf.h  ft_project_assets.h  ft_queue.h  ft_stack.h  ft_string.h  ft_vector.h  libft.h
virtual_machine/libft/makebuild/: Build.make  Config.make  SourceDefinitions.make
virtual_machine/libft/sources/ft_binary_heap/: AppendSrcFiles.cmake  ft_bheap_extract.c  ft_bheap_get.c  ft_bheap_init.c  ft_bheap_insert.c  ft_bheap_sift_down.c  ft_bheap_tools.c  ft_binary_heap_assets.h
virtual_machine/libft/sources/ft_iostream/: ft_get_lines_to_lst.c  ft_get_next_line.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
virtual_machine/libft/sources/ft_list/: AppendSrcFiles.cmake  ft_lstadd.c  ft_lstadd_back.c  ft_lstcpy.c  ft_lstcpy_elem.c  ft_lstdel.c  ft_lstdelone.c  ft_lstforeach.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstrcpy.c  ft_lstrev.c  ft_lstsort.c  ft_lstswap.c
virtual_machine/libft/sources/ft_matrix/: AppendSrcFiles.cmake  ft_matrix.c
virtual_machine/libft/sources/ft_memory/: AppendSrcFiles.cmake  ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memclear_n_del.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_realloc.c
virtual_machine/libft/sources/ft_printf/: AppendSrcFiles.cmake  args.c  char.c  char_tools.c  checkers_1.c  checkers_2.c  free_printf.c  ft_printf.c  ft_printf_local.h  ft_scale.c  ft_vprintf.c  init.c  init2.c  ldbl_1.c  ldbl_2.c  ldbl_3.c  ldbl_4.c  plist.c  postprocessing_1.c  postprocessing_2.c  preprocessing.c  print_result.c  processing.c  tools.c  uni_encode.c  validation.c
virtual_machine/libft/sources/ft_project_assets/: AppendSrcFiles.cmake  ft_error.c
virtual_machine/libft/sources/ft_string/: AppendSrcFiles.cmake  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  (+22 more)
virtual_machine/makebuild/: Build.make  Config.make  Makefile  SourceDefinitions.make
virtual_machine/sources/: check_flags.c  free_args.c  ft_vm_vector_int.c  ft_vm_vector_prc.c  ft_vm_vector_rng.c  globals.c  helpers.c  initialization.c  main.c  read_arguments.c  read_files.c  timsort.c  timsort_merge.c  vm_game.c  vm_operations1.c  vm_operations2.c  vm_operations3.c  vm_operations4.c  vm_ops_methods.c  vm_print_dump.c  vm_processes_ops.c
(+19 files in other folders)
